--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -21,7 +21,7 @@
       <div class="row">
 
          <div class="col-md-4">
-            <div class="card bg-light mb-3">
+            <div class="card border-primary mb-3">
                <div class="card-header text-center">
                   3 chambres, <strong>49&euro; / nuit</strong><br/>
                   <small>Pas encore noté</small>
@@ -41,7 +41,7 @@
             </div>
          </div>
          <div class="col-md-4">
-            <div class="card bg-light mb-3">
+            <div class="card border-primary mb-3">
                <div class="card-header text-center">
                   3 chambres, <strong>49&euro; / nuit</strong><br/>
                   <small>Pas encore noté</small>
@@ -59,7 +59,7 @@
             </div>
          </div>
          <div class="col-md-4">
-            <div class="card bg-light mb-3">
+            <div class="card border-primary mb-3">
                <div class="card-header text-center">
                   3 chambres, <strong>49&euro; / nuit</strong><br/>
                   <small>Pas encore noté</small>
