--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,3 +20,19 @@ div.carousel-caption {
 footer p {
    color:white;
 }
+
+.avatar {
+   max-width: 128px;
+   max-height: 128px;
+   border-radius: 50%;
+}
+
+.avatar-medium {
+   max-width: 64px;
+   max-height: 64px;
+}
+
+.avatar-mini {
+   max-width: 24px;
+   max-height: 24px;
+}
