--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,3 +36,7 @@ footer p {
    max-width: 24px;
    max-height: 24px;
 }
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+   color: firebrick !important;
+}
