--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -3,8 +3,13 @@
       <div class="col-md-4">
          <div class="card border-primary mb-3">
             <div class="card-header text-center">
-             {{ ad.rooms }} chambres, <strong>{{ ad.price }}&euro; / nuit</strong><br/>
+             {{ ad.rooms }} chambres, <strong>{{ ad.price | number_format(2,',','') }}&euro; par nuit</strong><br/>
+
+             {% if ad.comments|length > 0 %}
+               {% include 'partials/rating.html.twig' with {'rating': ad.avgRatings} %}
+             {% else %}
                <small>Pas encore noté</small>
+             {% endif %}
             </div>
             <a href="{{ url }}"> {# variable twig raccourci du path('ads_show', {'slug': ad.slug} ) #}
             <img src="{{ ad.coverImage }}" alt="Image de l'appartement" style="height: 200px; width:100%; display: block">
@@ -21,7 +26,7 @@
                <a href="{{ url }} {# variable twig raccourci du path('ads_show', {'slug': ad.slug} ) #}" class="btn btn-primary">En savoir plus !</a>
 
                {% if app.user and app.user == ad.author %}
-                  <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
+                  <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-primary">Modifier l'annonce</a>
 
                   <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger onclick="return confirm(`Etes vous sur de vouloir supprimer l'annonce : {{ad.title}} ?`)>Supprimer l'annonce</a>
                {% endif %}
