--- a/templates/ad/_collection.html.twig
+++ b/templates/ad/_collection.html.twig
@@ -6,7 +6,10 @@
    <input type="hidden" id="widgets-counter" value="0"> {# sert a corrigé un bug  de double suppréssion #}
 
    <div class="form-group">
-      <button type="button" id="add-image" class="btn btn-primary">Ajouter une image</button>
+      <button type="button" id="add-image" class="btn btn-primary">
+         <i class="fas fa-plus"></i>
+         Ajouter une image
+      </button>
    </div>
 {% endblock %}
 
