--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <title>Québec-loc - {% block title %}Welcome!{% endblock %}</title>
 
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/app.css">
 
         {% block stylesheets %}{% endblock %}
