--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,13 +4,13 @@
 
 {% block body %}
    <div class="container">
-      <div class="row align-items-center">
-         <div class="col-3 text-center">
+      <div class="row align-items-center mb-5">
+         <div class="col-md-3 text-center">
             <img src="{{user.picture}}" class="avatar mb-3" alt="Avatar de {{user.fullName}}">
             <br/>
             <span class="badge badge-primary">{{user.ads | length}} annonces</span>
          </div>
-         <div class="col-9">
+         <div class="col-md-9">
             <h1>{{ user.fullName}}</h1>
             {% if user is same as(app.user) %}
                <div class="mt-3">
