--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -20,19 +20,20 @@
          </thead>
 
          <tbody>
-            {% for booking in bookings %}
+            {% for booking in pagination.data %}
             <tr>
                <td>{{booking.id}}</td>
                <td>{{booking.createdAt|date('d/m/Y H:i')}}</td>
-               <td><img src="{{booking.booker.picture}}" alt="" class="avatar avatar-micro"> {{booking.booker.fullName}}</td>
+               <td><img src="{{booking.booker.picture}}" alt="" class="avatar avatar-micro"> {{booking.booker.fullName}}
+               </td>
                <td>{{booking.ad.title}}</td>
                <td>{{booking.duration}}</td>
                <td>{{booking.amount | number_format(2,',','')}} &euro;</td>
                <td>
-                  <a href="#" class="btn btn-primary">
+                  <a href="{{ path('admin_booking_edit', {'id': booking.id}) }}" class="btn btn-primary">
                      <i class="fas fa-pen"></i>
                   </a>
-                  <a href="#" class="btn btn-danger">
+                  <a href="{{ path('admin_booking_delete', {'id': booking.id}) }}" class="btn btn-danger">
                      <i class="fas fa-trash"></i>
                   </a>
                </td>
@@ -41,5 +42,7 @@
          </tbody>
 
       </table>
+
+      {{ pagination.display() }}
    </div>
 {% endblock %}
