--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -21,5 +21,6 @@
 
 
 {% block javascripts %}
-   <script src="/js/ad.js"></script>
+{{ encore_entry_script_tags("ad") }}
+{# <script src="{{ encore_entry_script_tags("ad") }}"></script> #}
 {% endblock %}
