--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -52,5 +52,6 @@
 {% endblock %}
 
 {% block javascripts %}
-   <script src="/js/ad.js"></script>
+{{ encore_entry_script_tags("ad") }}
+{# <script src="{{ encore_entry_script_tags("ad") }}"></script> #}
 {% endblock %}
