--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-   Bienveune sur le meilleur réseau d'appartements du Québec
+   Bienvenue sur le meilleur réseau d'appartements du Québec
 {% endblock %}
 
 {% block body %}
@@ -12,7 +12,7 @@
          <hr class="my-4">
          <p>Vous êtes voyageur ? Et vous voulez voir où vous pourrez loger pour votre prochaine visite de la province de Québec ?</p>
          <p class="lead">
-           <a class="btn btn-primary btn-lg" href="#" role="button">Voir nos annonces</a>
+           <a class="btn btn-primary btn-lg" href="{{ path('ads_index') }}" role="button">Voir nos annonces</a>
          </p>
       </div>
 
@@ -20,101 +20,34 @@
 
       <div class="row">
 
-         <div class="col-md-4">
-            <div class="card border-primary mb-3">
-               <div class="card-header text-center">
-                  3 chambres, <strong>49&euro; / nuit</strong><br/>
-                  <small>Pas encore noté</small>
-               </div>
+        {% for data in ads %}
+            {% include 'ad/_ad.html.twig' with {'ad': data.annonce} %}
+        {% endfor %}
 
-               <img src="http://hold.it/1000x400" alt="Image de l'appartement" style="height: 200px; width:100%; display: block">
-
-               <div class="card-body">
-                  <h4 class="card-title">
-                     Appartement de ouf !
-                  </h4>
-                  <p class="card-text">
-                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste accusamus laborum veniam. Itaque enim quisquam ut vel quas possimus recusandae?
-                  </p>
-                  <a href="#" class="btn btn-primary">En savoir plus !</a>
-               </div>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div class="card border-primary mb-3">
-               <div class="card-header text-center">
-                  3 chambres, <strong>49&euro; / nuit</strong><br/>
-                  <small>Pas encore noté</small>
-               </div>
-               <img src="http://hold.it/1000x400" alt="Image de l'appartement" style="height: 200px; width:100%; display: block">
-               <div class="card-body">
-                  <h4 class="card-title">
-                     Appartement de ouf !
-                  </h4>
-                  <p class="card-text">
-                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste accusamus laborum veniam. Itaque enim quisquam utvel quas possimus recusandae?
-                  </p>
-                  <a href="#" class="btn btn-primary">En savoir plus !</a>
-               </div>
-            </div>
-         </div>
-         <div class="col-md-4">
-            <div class="card border-primary mb-3">
-               <div class="card-header text-center">
-                  3 chambres, <strong>49&euro; / nuit</strong><br/>
-                  <small>Pas encore noté</small>
-               </div>
-               <img src="http://hold.it/1000x400" alt="Image de l'appartement" style="height: 200px; width:100%; display: block">
-               <div class="card-body">
-                  <h4 class="card-title">
-                     Appartement de ouf !
-                  </h4>
-                  <p class="card-text">
-                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste accusamus laborum veniam. Itaque enim quisquam utvel quas possimus recusandae?
-                  </p>
-                  <a href="#" class="btn btn-primary">En savoir plus !</a>
-               </div>
-            </div>
-         </div>
       </div>
 
       <h2 class="h1 my-5">Nos propriétaires stars</h2>
 
       <div class="row">
+         {% for data in users %}
          <div class="col">
             <div class="card border-primary mb-3">
                <div class="card-body">
                   <h4 class="card-title">
-                     Dédé la bidouille
+                     {{data.user.fullName}}
 
                      <hr>
 
                      <div class="card-text">
-                        <img src="http://placehold.it/64x64" alt="Avatar de Dédé la bidouille" class="float-left mr-3">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, quidem?</p>
-                        <a href="#" class="btn btn-success float-right">En savoir plus!</a>
+                        <img src="{{data.user.picture}}" alt="Avatar de {{data.user.fullName}}" class="float-left mr-3">
+                        <p>{{data.user.introduction}}</p>
+                        <a href="{{ path('user_show', {'slug': data.user.slug}) }}" class="btn btn-success float-right">En savoir plus!</a>
                      </div>
                   </h4>
                </div>
             </div>
          </div>
-         <div class="col">
-            <div class="card border-primary mb-3">
-               <div class="card-body">
-                  <h4 class="card-title">
-                     Dédé la bidouille
-
-                     <hr>
-
-                     <div class="card-text">
-                        <img src="http://placehold.it/64x64" alt="Avatar de Dédé la bidouille" class="float-left mr-3">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, quidem?</p>
-                        <a href="#" class="btn btn-success float-right">En savoir plus!</a>
-                     </div>
-                  </h4>
-               </div>
-            </div>
-         </div>
+         {% endfor %}
       </div>
    </div>
 {% endblock %}
